--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "modren-ui",
+  "name": "chat-app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,10 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "@rnmapbox/maps": "^10.0.15",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-awesome-alerts": "^2.0.0",
+    "react-native-elements": "^3.4.3",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-paper": "^5.11.1",
+    "react-native-simple-radio-button": "^2.7.4",
+    "react-native-web": "~0.19.6",
+    "twrnc": "^3.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
